2020-05-18  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-map.c (entry_name_to_varname): Use cur_map_id instead of
	a map.
	(pk_map_load_parsed_map): Do not create the map until all the
	variables are defined without error.

2020-05-18  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/poke.pk (auto_map): Escape . in regexps.

2020-05-18  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-cmd-map.c (pk_cmd_map_show): Include the map name while
	listing entries.
	* testsuite/poke.cmd/maps-4.pk: Adapt accordingly.
	* testsuite/poke.cmd/maps-5.pk: Likewise.
	* testsuite/poke.cmd/maps-6.pk: Likewise.

2020-05-18  Jose E. Marchesi  <jemarch@gnu.org>

	* maps/elf.map: Rename entry from elf to file.

2020-05-17  Tim Rühsen  <tim.ruehsen@gmx.de>

	* libpoke/pkl-env.c (hash_string): Suppress ASAN runtime error
	"implicit-signed-integer-truncation-or-sign-change".

2020-05-18  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-lex.l: Support :: separators in alien token
	identifiers.
	* poke/pk-map.c (pk_map_alien_token_handler): Use :: to separate
	mapname from entryname in alien tokens.
	(pk_map_normalize_name): Do not reduce sequences of _'s.

2020-05-18  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-lex.l: Change bit-concatenation operator from :: to
	:::.
	* doc/poke.texi (From Bytes to Integers): Update accordingly.
	(Bitwise Operators): Likewise.
	* testsuite/poke.pkl/bconc-7.pk: Likewise.
	* testsuite/poke.pkl/bconc-6.pk: Likewise.
	* testsuite/poke.pkl/bconc-5.pk: Likewise.
	* testsuite/poke.pkl/bconc-4.pk: Likewise.
	* testsuite/poke.pkl/bconc-3.pk: Likewise.
	* testsuite/poke.pkl/bconc-2.pk: Likewise.
	* testsuite/poke.pkl/bconc-1.pk: Likewise.

2020-05-18  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-map.c (pk_map_normalize_name): New function.
	(pk_map_load_file): Use pk_map_normalize_name.
	* poke/pk-cmd-map.c (pk_cmd_map_create): Likewise.

2020-05-18  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/poke.c: Make poke_prompt_maps_p to default to yes.